fonction affichage fonctionnel

--- a/templates/marker.html
+++ b/templates/marker.html
@@ -1,7 +1,7 @@
 {
 "marker":[
 {% for marker in markers %}
-	{"id":"{{ str(markers.id) }}", 
+	{"id":"{{ markers.id }}", 
 	"title":"{{ markers.title }}", 
 	"cathegorie":"{{ markers.cathegorie }}", 
 	"description":"{{ markers.description }}",
